# Trading-Engine

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE  config.json
client/: BUILD
cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/server/: Makefile  cmake_install.cmake  trading_engine_server
cmake/utils/: Makefile  cmake_install.cmake
messages/: BUILD  CMakeLists.txt
messages/docs/: example_order.json
messages/include/: order.h
messages/src/: order.cpp
order_book/: CMakeLists.txt
order_book/include/: order_book.h
order_book/src/: order_book.cpp
orders/include/: order.h  order_core.h  order_metadata.h
scripts/: build.sh  configure.sh
server/: BUILD  CMakeLists.txt
server/include/: trading_engine.h  trading_engine_server_config.h
server/src/: main.cpp  trading_engine.cpp  trading_engine_server_config.cpp
utils/: BUILD  CMakeLists.txt
utils/include/: logging.h
utils/src/: logging.cpp  uuid.cpp
